styled buttons in portfolio

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!-- MAIN (Center website) -->
 <div class="main">
 <head>
+<!-- git status
+git add .
+git commit -m "insert comment (be specific about what you updated!)"
+git push -->
+
+
   <title>My Fellowship Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" charset="utf-8"></script>
@@ -53,6 +59,7 @@
     Check out the viewport code from line 114 to line 121 in landing.css to learn how this website will scale with screen size-->
 <p>I enjoy drawing.</p>
 
+<img src="">
 
 
 <br>
@@ -114,7 +121,8 @@
   <p>Copy Righted CodeNation 2018</p>
   <p>Contact Info:
     Email- @s_stephany.casillas@ousd.org
-    Gitub-
+    Gitub-stephanycasillas10
+    LinkedIn-stephanycasillas
                    
   </p>
 </footer>
