--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,26 @@
 <body>
 <head>
+<!-- python3 -m http.server 3000 -->
+
   <link rel="stylesheet" href="portfolio.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
 </head>
 
   <h1>Portfolio</h1>
   <nav>
+  <div id = 'myBtnContainer'>
   <button onclick= "window.location.href= 'index.html';"class="btn"> Home</button>
   
    <button onclick= "window.location.href= 'portfolio.html';"class="btn"> Portfolio</button>
+   </div>
+   
   </nav>
   <img src="screenshot.png">
-  <a href="https://stephanycasillas10.github.io/Create-Task"">Try it out!</a>
+
+  <a href="https://stephanycasillas10.github.io/Create-Task">Try it out!</a>
+
   <p>I created this for the create task in my AP computer science class. The way it works is you put your zodiac sign in the input box and it will give you the animal that correlates to your sign. </p>
-<div id = 'myBtnContainer'>
-  
-</div>
+
 
 
 </body>
