--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,18 @@
-<body>
-<head>
-<!-- python3 -m http.server 3000 -->
-
-  <link rel="stylesheet" href="portfolio.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-</head>
-
-  <h1>Portfolio</h1>
+<div class="main">
+    <head>
+        <link rel="stylesheet" href="portfolio.css">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    </head>
+    <div class="heading">
+        <h1>Portfolio</h1>
+    </div>
+</div>
   <nav>
   <div id = 'myBtnContainer'>
-  <button onclick= "window.location.href= 'index.html';"class="btn"> Home</button>
-  
-   <button onclick= "window.location.href= 'portfolio.html';"class="btn"> Portfolio</button>
+    <button onclick= "window.location.href= 'index.html';"class="btn"> Home</button>
+    <button onclick= "window.location.href= 'portfolio.html';"class="btn"> Portfolio</button>
+    <button onclick= "window.location.href= 'resume.html';"class="btn"> Resume</button>
+
    </div>
    
   </nav>
@@ -23,4 +24,3 @@
 
 
 
-</body>
