finished styling the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,13 +14,15 @@
     <button onclick= "window.location.href= 'resume.html';"class="btn"> Resume</button>
 
    </div>
-   
   </nav>
-  <img src="screenshot.png">
+  <br>
+  <div class="content">
+    <h3>Zodiac Sign Project</h1>
+    <img src="screenshot.png">
+    <a href="https://stephanycasillas10.github.io/Create-Task">Try it out!</a>
 
-  <a href="https://stephanycasillas10.github.io/Create-Task">Try it out!</a>
-
-  <p>I created this for the create task in my AP computer science class. The way it works is you put your zodiac sign in the input box and it will give you the animal that correlates to your sign. </p>
-
-
+    <div class="description">
+        <p>I created this webpage for the create task in my AP computer science class. The way it works is you put your zodiac sign in the input box and it will give you the animal that correlates to your sign. </p>
+    </div>
+</div>
 
