--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
   <img src="headshot.jpg">
   <p>Copy Righted CodeNation 2018</p>
   <p>Contact Info:
-    Email- @s_stephany.casillas@ousd.org
+    Email- @stephanycasillas7@gmail.com
     Gitub-stephanycasillas10
     LinkedIn-stephanycasillas
                    
