changed junior to senior

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ git push origin master -->
         
     </div>
     <div class="description">
-        <p>I am currently a junior in high school attending C.C.P.A.</p>
+        <p>I am currently a senior in high school attending C.C.P.A.</p>
     </div>
 </div>
 <br>
